[package]
name = "client"
version = "0.1.0"
rust-version = "1.75.0"
edition = "2021"

[dependencies]
anchor-client = { workspace = true }
anchor-lang = { workspace = true }
raydium-cp-swap = { path = "../programs/cp-swap", features = [
    "no-entrypoint",
    "client",
] }
solana-sdk = "2"
solana-client = "2"
solana-account-decoder = "2"
solana-transaction-status = "2"
spl-token = { version = ">=6", features = ["no-entrypoint"] }
spl-token-client = "0.13.0"
spl-memo = ">=5"
spl-associated-token-account = { version = ">=5", features = ["no-entrypoint"] }
spl-token-2022 = { version = ">=5", features = ["no-entrypoint"] }
clap = { version = "4.5.20", features = ["derive"] }
anyhow = "1.0.93"
rand = "0.8"
hex = "0.4.3"
configparser = "3.1.0"
serde_json = { version = "1.0.132" }
serde = { version = "1.0", features = ["derive"] }
arrayref = "0.3.9"
bs58 = { version = "0.5" }
bincode = { version = "1.3.3" }
regex = "1"
colorful = "0.2.2"
