[package]
name = "raydium-cp-swap"
version = "0.2.0"
description = "Raydium constant product AMM, supports Token2022 and without Openbook"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "raydium_cp_swap"

[features]
no-entrypoint = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
enable-log = []
devnet = []
client = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true, features = ["metadata"] }
spl-token = { version = ">=5", features = ["no-entrypoint"] }
spl-math = { version = "0.3" }
spl-memo = ">=5"
uint = "0.9.5"
solana-security-txt = "1.1.1"
bytemuck = { version = "1.19.0", features = ["derive", "min_const_generics"] }
arrayref = { version = "0.3.9" }

[dev-dependencies]
quickcheck = "0.9"
proptest = "1.5"
rand = "0.8.5"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = true
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
